updated_yaml_files/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 1

  selector:
    matchLabels:
      app: django

  template:
    metadata:
      labels:
        app: django

    spec:
      serviceAccountName: django

      containers:
        - name: django

          image: 360305064293.dkr.ecr.us-east-1.amazonaws.com/recipe-app-api-app-final:new

          ports:
            - containerPort: 9000

          volumeMounts:
            - name: static
              mountPath: /vol/web/static

            - name: media
              mountPath: /vol/web/media

            - name: aws-secrets
              mountPath: /mnt/secrets-store
              readOnly: true

      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: efs-pvc-static

        - name: media
          persistentVolumeClaim:
            claimName: efs-pvc

        - name: aws-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: django-db-secrets
