updated_yaml_files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: django-ingress

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:360305064293:certificate/ffce7b14-4565-452d-8ebf-0a6e6cf56db6"

    alb.ingress.kubernetes.io/ssl-redirect: "443"

    external-dns.alpha.kubernetes.io/hostname: app.maheshdevops.shop

spec:
  ingressClassName: alb

  rules:
    - host: app.maheshdevops.shop

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: proxy
                port:
                  number: 80
